# Tic-Tac-Toe---2

./: .gitignore  main.py  pyproject.toml  test.py
core/: checks.py  errors.py  gloabals.py  move.py  utils.py
