[tool.poetry]
name = "Tic-Tac-Toe-2"
version = "0.1.0"
description = ""
authors = ["AR_JPEG <58893337+AR-jpeg@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
getkey = "^0.6.5"
colorama = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
